--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "nlw-05-podcastr",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "date-fns": "^2.22.1",
-    "next": "10.2.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.34.1"
-  },
-  "devDependencies": {
-    "@types/node": "^15.12.0",
-    "@types/react": "^17.0.9",
-    "typescript": "^4.3.2"
-  }
+    "name": "nlw-05-podcastr",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "server": "json-server server.json -w -d 750 -p 3333"
+    },
+    "dependencies": {
+        "date-fns": "^2.22.1",
+        "next": "10.2.2",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "sass": "^1.34.1"
+    },
+    "devDependencies": {
+        "@types/node": "^15.12.0",
+        "@types/react": "^17.0.9",
+        "json-server": "^0.16.3",
+        "typescript": "^4.3.2"
+    }
 }
