--- a/package.json
+++ b/package.json
@@ -20,7 +20,15 @@
     "devDependencies": {
         "@types/node": "^15.12.0",
         "@types/react": "^17.0.9",
+        "@typescript-eslint/eslint-plugin": "^4.26.0",
+        "@typescript-eslint/parser": "^4.26.0",
+        "eslint": "^7.28.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
         "json-server": "^0.16.3",
+        "prettier": "2.3.1",
         "typescript": "^4.3.2"
     }
 }
